# AIBOTIK

./: .dockerignore  .gitattributes  .gitignore  DYNAMIC_INJECTION.md  Dockerfile  README.md  SSH_GUIDE.md  alembic.ini  asda.md  create_character_cards.py  docker-compose.ngrok.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  railway.json  repomix-output.xml  requirements.txt  supervisord.conf
alembic/: env.py
backend/: Dockerfile  main.py  requirements.txt
bot/: Dockerfile  config.py  main.py  requirements.txt
config/: character_modifiers.py  greeting_translations.py  scenario_states.py  settings.py
content/: character_meta_backup.json  character_meta_v2.json
docs/: character_schema.json  create_character_output_schema.json  runpod_facefusion_worker_logging.md  runpod_model_cache_deploy.md
frontend/: Dockerfile  index.html  package.json  vite.config.js
handlers/: commands.py  messages.py  webapp.py
migrations/: add_context_aware_rag_columns.py  migrate_to_modular_prompts.py
models/: character.py  session.py  state.py
nginx/: nginx.conf  nginx.dev.conf  nginx.ngrok.conf
runpod-facefusion-direct/: Dockerfile  handler.py  model_preflight.py  patch_facefusion_no_downloads.py
runpod-manhwa-comfy/: Dockerfile  start-manhwa.sh
scripts/: cleanup_orphan_images.py  init_prompts.py  remote_prompts_backup.json  seed_content.py
services/: card_parser.py  character_manager.py  llm_client.py  prompt_builder.py  state_analyzer.py  summary_engine.py
shared/: __init__.py  card_parser.py  character_order.py  config.py  constants.py  (+4 more)
(+214 files in other folders)
